--- a/spa/css/spa.css
+++ b/spa/css/spa.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
 }
 h1, h2, h3, h4, h5, h6, p {
-    margin-bottom: 10px;
+    margin-bottom: 6pt;
 }
 ol, ul, dl {
     list-style-position: inside;
@@ -19,7 +19,7 @@ ol, ul, dl {
 
 /* begin standard selectors */
 body {
-    font: 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+    font: 10pt 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
     color: #444;
     background-color: #888;
 }
@@ -35,15 +35,16 @@ strong {
 /* begin spa namespace selector */
 #spa {
     position: absolute;
-    top: 8px;
-    left: 8px;
-    right: 8px;
-    bottom: 8px;
-    min-height: 500px;
-    min-width: 500px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    min-height: 15em;
+    min-width: 35em;
     overflow: hidden;
-    background-color: #fff;
-    border-radius: 0 8px 0 8px;
+/*    background-color: #fff; */
+/*    border-radius: 0 8px 0 8px; */
+    background: #fff
 }
 
 /* begin utility selectors */
