--- a/spa/css/spa.shell.css
+++ b/spa/css/spa.shell.css
@@ -3,7 +3,7 @@
    */
 .spa-shell-head, .spa-shell-head-logo, .spa-shell-head-acct,
 .spa-shell-head-search, .spa-shell-main, .spa-shell-main-nav,
-.spa-shell-main-content, .spa-shell-foot, .spa-shell-chat,
+.spa-shell-main-content, .spa-shell-foot, /* .spa-shell-chat, */
 .spa-shell-modal {
     position: absolute;
 }
@@ -69,6 +69,9 @@
     right: 0;
     height: 40px;
 }
+
+/* going to spa.chat.css */
+/*
 .spa-shell-chat {
     bottom: 0;
     right: 0;
@@ -82,6 +85,7 @@
   .spa-shell-chat:hover {
       background: #a00;
   }
+*/
 .spa-shell-modal {
     margin-top: -200px;
     margin-left: -200px;
@@ -92,4 +96,5 @@
     background: #fff;
     border-radius: 3px;
     z-index: 2;
+    display: none;
 }
