--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,9 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'gaid', 'auto');
+  ga('create', '{{ site.google_analytics_id }}', 'auto');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
-
 </script>
 
 <div id="fb-root"></div>
@@ -16,7 +15,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.6&appId=fbappid";
+  js.src = "https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.12&appId={{ site.fb_app_id }}";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
