--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,8 +36,8 @@
   <meta property="og:type" content="article" />
   {% if page.date %}<meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">{% endif %}
 
-  <meta property="fb:app_id" content="fbappid" />
-  <meta name="naver-site-verification" content="naver-site-verify-id" />
+  <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
+  <meta name="naver-site-verification" content="{{ site.naver_site_verification }}" />
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
   <link rel="shortcut icon" href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" type="image/png"/>
