naver search console

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,4 +20,5 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <a href="{{ site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
+<meta name="naver-site-verification" content="c162847e57c5d356ce72f4c9b9e81bd5d57de196" />
 <!-- header end -->
