--- a/hugo/themes/simple/layouts/_default/list.html
+++ b/hugo/themes/simple/layouts/_default/list.html
@@ -2,7 +2,10 @@
   <h1>{{ .Title }}</h1>
   {{ .Content }}
   {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+  HHH   <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{ .Summary }}
   {{ end }}
 {{ end }}
+  <div>
+    page content
+    </div>
