--- a/hugo/themes/simple/layouts/_default/baseof.html
+++ b/hugo/themes/simple/layouts/_default/baseof.html
@@ -7,9 +7,9 @@
   <header>
     {{ partial "header.html" . }}
   </header>
-  <main>
+  <div class=main>
     {{ block "main" . }}{{ end }}
-  </main>
+  </div>
   <footer>
     {{ partial "footer.html" . }}
   </footer>
