--- a/hugo/themes/simple/layouts/_default/home.html
+++ b/hugo/themes/simple/layouts/_default/home.html
@@ -1,12 +1,18 @@
 {{ define "main" }}
 {{ .Content }}
 <div class="main">
-<ul class="toc">
+  <ul class="toc">
+    <li class="toc-header"><span class="toc-title">{{ .Site.Title }}</span>
+      <span class="toc-subtitle"><a href="https://www.linkedin.com/in/cwyang89/">양철웅</a>의, 특별히 주제를 정해두지 않은 이야기들</span>
   {{ range site.RegularPages }}
-<li><a href="{{ .RelPermalink }}" class="">{{ .LinkTitle }}</a></li>
+<li><a href="{{ .RelPermalink }}" class="">{{ .LinkTitle }}</a>
 <span class="toc-when">{{ .Date.Format "January 2006" }}</span>
 <div class="toc-summary">
-    {{ .Summary }}
+{{ with .Scratch.Get "excerpt" }}
+  {{ . }}
+{{ else }}
+  {{ .Summary | plainify | truncate 80}}
+{{ end }}
 </div>
 {{ end }}
 </ul>
