--- a/hugo/themes/simple/layouts/_default/home.html
+++ b/hugo/themes/simple/layouts/_default/home.html
@@ -4,7 +4,10 @@
   <ul class="toc">
     <li class="toc-header"><span class="toc-title">{{ .Site.Title }}</span>
       <span class="toc-subtitle"><a href="https://www.linkedin.com/in/cwyang89/">양철웅</a>의, 특별히 주제를 정해두지 않은 이야기들</span>
-  {{ range site.RegularPages }}
+      <li class="toc-head"><b>글 목록 </b></li>
+      {{ range site.RegularPages }}
+
+      
 <li><a href="{{ .RelPermalink }}" class="">{{ .LinkTitle }}</a>
 <span class="toc-when">{{ .Date.Format "January 2006" }}</span>
 <div class="toc-summary">
@@ -15,6 +18,9 @@
 {{ end }}
 </div>
 {{ end }}
-</ul>
+<li class="toc toc-header copyright"> © {{ now.Year }} Chul-Woong Yang. All rights reserved.
+<br>
+<a href="/feed.atom">Atom / RSS</a></li>
+  </ul>
 </div>
 {{ end }}
