--- a/hugo/themes/simple/layouts/partials/header.html
+++ b/hugo/themes/simple/layouts/partials/header.html
@@ -1,1 +1,9 @@
+{{ if not .IsHome }}
+<div class="header">
+  <h3><a href="/">{{ .Site.Title}}</a></h3>
+  <h4><a href="https://www.linkedin.com/in/cwyang89/">양철웅</a>의, 특별히 주제를 정해두지 않은 이야기들</h4>
+  <a class="rss" href="/feed.atom">RSS</a>
+</div>
+{{ end }}
 {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+
