--- a/hugo/themes/simple/layouts/_default/home.html
+++ b/hugo/themes/simple/layouts/_default/home.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 {{ .Content }}
 <div class="main">
+  <img src="/assets/images/cwyang2023.png" alt="Hi!" class="home-image">
   <ul class="toc">
     <li class="toc-header"><span class="toc-title">{{ .Site.Title }}</span>
       <span class="toc-subtitle"><a href="https://www.linkedin.com/in/cwyang89/">양철웅</a>의, 특별히 주제를 정해두지 않은 이야기들</span>
