Dancing Script title font

--- a/hugo/static/css/custom.css
+++ b/hugo/static/css/custom.css
@@ -93,7 +93,7 @@ a.back {
     margin-top: 2em;
 }
 .toc-title {
-    font-family: cursive, serif;
+    font-family: "Dancing Script", cursive, serif;
     font-style: italic;
     font-size: 300%;
     line-height: 83%;
