--- a/hugo/themes/simple/layouts/_default/single.html
+++ b/hugo/themes/simple/layouts/_default/single.html
@@ -20,5 +20,6 @@
   {{ .Content }}
 </div>
 <hr>
-{{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+{{ partial "terms.html" (dict "taxonomy" "categories" "label" "Category" "page" .) }}
+{{ partial "terms.html" (dict "taxonomy" "tags" "label" "Tag" "page" .) }}
 {{ end }}
