--- a/hugo/themes/simple/layouts/_default/list.html
+++ b/hugo/themes/simple/layouts/_default/list.html
@@ -14,11 +14,7 @@
 {{ end }}
 </div>
 {{ end }}
-<li class="toc toc-header copyright"> © {{ now.Year }} Chul-Woong Yang. All rights reserved.
-<br>
-<a href="/feed.atom">Atom / RSS</a></li>
+{{ partial "mainfooter.html" . }}
   </ul>
 </div>
 {{ end }}
-
-
